--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -196,7 +200,23 @@ li {
 }
 
 /***** SKILLS *****/
+.skills-article {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+}
 
+.skill {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid #c1c1c1;
+    padding: 1rem 0;
+}
+
+.skill img {
+    max-width: 4rem;
+}
 
 /***** PROJECTS *****/
 
