--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 
 .logo {
@@ -45,6 +46,7 @@ li {
     background-color: black;
     padding-inline: 1.5rem;
     box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+    z-index: 1;
     transition: .25s;
 }
 
@@ -137,14 +139,15 @@ li {
     width: max-content;
     border: 1px solid black;
     padding: .3rem 1rem;
-    background-color: transparent;
+    background-color: white;
     cursor: pointer;
-    transition: background-color .3s, color .3s;
+    transition: background-color .3s, color .3s, border .3s;
 }
 
 .boton:hover {
+    border: 1px solid white;
     background-color: black;
-    color: white;
+    color: white; 
 }
 
 /***** EDUCATION *****/
@@ -158,8 +161,10 @@ li {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    border: 1px solid #c1c1c1;
+    /* border: 1px solid #c1c1c1; */
     padding: 1rem;
+
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
 .educacion-item img {
@@ -174,7 +179,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: .5rem;
+    gap: .8rem;
     text-decoration: none;
     color: black;
 }
@@ -203,23 +208,81 @@ li {
 .skills-article {
     display: grid;
     grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
     gap: 1rem;
 }
 
-.skill {
+.skill-item {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid #c1c1c1;
+    /* border: 1px solid #c1c1c1; */
     padding: 1rem 0;
+
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
-.skill img {
+.skill-item img {
     max-width: 4rem;
 }
 
 /***** PROJECTS *****/
+.proyectos-article {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 1fr;
+    gap: 1rem;
+}
 
+.proyecto-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.proyecto-item iframe {
+    width: 100%;
+    height: 20rem;
+}
+
+.proyecto-titulo {
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+
+    background-color: black;
+    color: white;
+    padding: 1rem;
+}
+
+.proyecto-titulo img{
+    width: 2rem;
+    height: 2.2rem;
+}
+
+.proyecto-titulo__texto {
+    font-size: 1.5rem;
+}
+
+.proyecto-informacion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: .5rem;
+    padding: .5rem 1rem;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+.proyecto-informacion__subtexto {
+    color: #898989;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.boton.btn-project {
+    width: 100%;
+}
 
 /***** CONTACT *****/
 
@@ -236,7 +299,11 @@ li {
     display: none;
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 550px) {
+
+    html {
+        scroll-padding-top: 5rem;
+    }
 
     /***** NAVBAR *****/
     .header {
@@ -271,6 +338,16 @@ li {
     /***** EDUCATION *****/
     .educacion-article{
         grid-template-columns: repeat(4, 1fr);
+    }
+
+    /***** SKILLS *****/
+    .skills-article {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+    /***** PROJECTS *****/
+    .proyectos-article {
+        grid-template-columns: repeat(2, 1fr);
     }
     
 }
